--- a/css/ar-style.css
+++ b/css/ar-style.css
@@ -1,53 +1,202 @@
 /** 
+
 Styles for Ar Simple Socil Sharing 
+
 Author @Abdul Awal
+
 **/
+
 .ar_share_wrapper{
+
 	font-family: Great Vibes, arial, sans-serif;
+
 	font-size: 30px;
+
 	width: 100%;
+
+	margin: 30px auto;
+
+}
+
+.clear{
+
+	clear: both;
+
+}
+
+.ar_share_wrapper ul li{
+
+	list-style:none;
+
+	border-right: 0px solid #ddd;
+
+	padding:0 15px 10px 0;
+
+	float:left;
+
+	text-align:center;
+
+}
+
+.ar_share_wrapper ul li ul{
+
+	display:none;
+
+}
+
+.ar_share_wrapper ul li:hover ul{
+
+	display: block;
+
+	box-shadow: 2px 3px 17px #555;
+
+	-webkit-box-shadow: 2px 3px 17px #555;
+
+	-moz-box-shadow: 2px 3px 17px #555;
+
+	border-radius: 40px;
+
+	-webkit-border-radius: 40px;
+
+	-moz-border-radius: 40px;
+
+	position: absolute;
+
+	padding: 10px 20px 0px;
+
+	margin-top:10px;
+
+	background:#fff;
+
+}
+
+.ar_share_wrapper ul li:hover{
+
+	background: url('../images/box_arrow.png') no-repeat bottom center;
+
+}
+
+.ar_share_wrapper ul li:hover ul li{
+
+	padding:0 3px;
+
+	margin: 3px 5px;
+
+	border-right:0px;
+
+	width: auto;
+
+	list-style:none;
+
+	background: none;
+
+}
+
+.ar_share_wrapper ul li:hover ul li img{
+
+	vertical-align: top;
+
+	border:0px;
+
+	box-shadow: none;
+
+	-webkit-box-shadow: none;
+
+	-moz-box-shadow: none;
+}
+
+.ar_share_wrapper ul li:hover ul li:hover{
+
+	padding-bottom: 0px;
+
+	background: none;
+
+}
+
+/** Direct **/
+
+.ar_share_wrapper_direct{
+
+	font-family: Great Vibes, arial, sans-serif;
+
+	font-size: 30px;
+
+	width: 100%;
+
 	margin: 30px auto;
 }
-.clear{
-	clear: both;
-}
-.ar_share_wrapper ul li{
+
+.ar_share_wrapper_direct ul li{
+
 	list-style:none;
+
 	border-right: 0px solid #ddd;
-	padding:0 15px 10px 0;
-	float:left;
-	text-align:center;
-}
-.ar_share_wrapper ul li ul{
-	display:none;
-}
-.ar_share_wrapper ul li:hover ul{
-	display: block;
-	box-shadow: 2px 3px 17px #555;
-	-webkit-box-shadow: 2px 3px 17px #555;
-	-moz-box-shadow: 2px 3px 17px #555;
-	border-radius: 40px;
-	-webkit-border-radius: 40px;
-	-moz-border-radius: 40px;
-	position: absolute;
-	padding: 10px 20px 0px;
-	margin-top:10px;
-	background:#fff;
-}
-.ar_share_wrapper ul li:hover{
-	background: url('../images/box_arrow.png') no-repeat bottom center;
-}
-.ar_share_wrapper ul li:hover ul li{
+
 	padding:0 3px;
+
+	float:left;
+
+	text-align:center;
+
+}
+
+.ar_share_wrapper_direct ul li:hover{
+	background: none;
+}
+
+.share{
+
+	display: block;
+
+	position:relative;
+
+	clear:both;
+
+	padding: 10px 20px 0px;
+
+	margin-top:10px;
+
+}
+
+.share li:hover{
+
+	background: none!important;
+
+}
+
+.share li{
+
+	padding:0 3px;
+
+	margin: 3px 5px;
+
 	border-right:0px;
+
 	width: auto;
+
 	list-style:none;
+
 	background: none;
+
 }
-.ar_share_wrapper ul li:hover ul li img{
+
+.share li img{
+
 	vertical-align: top;
+
+	border:0px;
+
+	box-shadow: none;
+
+	-webkit-box-shadow: none;
+
+	-moz-box-shadow: none;
 }
-.ar_share_wrapper ul li:hover ul li:hover{
+
+.share li:hover{
+
 	padding-bottom: 0px;
+
 	background: none;
+
 }
